<resources>
    <string name="app_name">CARE4U</string>
    <string name="tab_home">Home</string>
    <string name="tab_medical">Medical History</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in with FB</string>
    <string name="action_sign_in_short">Sign in with FB</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="irritable_bowel_syndrome_ibs">Irritable bowel syndrome (IBS)</string>
    <string name="diabetes">Diabetes</string>
    <string name="gastritis">Gastritis</string>
    <string name="lactose_intolerant">Lactose intolerant</string>
    <string name="hypertension">Hypertension</string>
    <string name="default_img">Default Image</string>
    <string name="introduction">Care4u identifies through the camera how healthy is the food you are about to eat regarding your current health condition that you already let us know in the app at the beginning in a form, this means it keeps the tracking for different kinds of nutrients, fat, cholesterol, and others of what you want to eat. In this way, in order to what might be a bad food for your health we can create an alert of the product.</string>
    <string name="facebook_app_id">622242628181716</string>
    <string name="fb_login_protocol_scheme">fb622242628181716</string>
</resources>
