<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/cholesterol" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/diabetes" />

        <Switch
            android:id="@+id/switch4"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/gastritis" />

        <Switch
            android:id="@+id/switch5"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/irritable_bowel_syndrome_ibs" />
        <Switch
            android:id="@+id/switch6"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/lactose_intolerant" />
        <Switch
            android:id="@+id/switch7"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/hypertension" />
    </LinearLayout>

</ScrollView>